--- a/register.html
+++ b/register.html
@@ -177,7 +177,7 @@ $(document).ready(function() {
         
         
         <!-- \ START - FORM SECTION  / -->
-        <form action="thankyou.html" method="post" class="RegisterAdvancedForm">
+        <form action="thankyou.html" method="get" class="RegisterAdvancedForm">
 
 
 
