--- a/register2.html
+++ b/register2.html
@@ -204,7 +204,7 @@ $(document).ready(function() {
 
 
         <!-- \ START - FORM SECTION  / -->
-        <form action="thankyou.html" method="post" class="RegisterForm" >
+        <form action="thankyou.html" method="get" class="RegisterForm" >
 
                 <!-- \ START FORM CONTAINER / -->
                 <div class="formContanr">
